node-main/deps/v8/test/message/fail/redeclaration3.out
*%(basename)s:6: SyntaxError: Identifier 'foo' has already been declared
var [...foo] = [11];
        ^
SyntaxError: Identifier 'foo' has already been declared

